--- a/public/assets/locales/fr/translations.json
+++ b/public/assets/locales/fr/translations.json
@@ -176,7 +176,51 @@
   "projectdata": {
     "title": "Données Projet"
   },
-
+  "sidebar": {
+    "dashboard": "Tableau de bord",
+    "projects": "Projects",
+    "scr": {
+      "title": "SCR",
+      "hypothesis": "Hypothèse",
+      "counterparty-risk": "Risque de contrepartie",
+      "health-scr": "Health SCR",
+      "scr-ul": "SCR UL"
+    },
+    "scr-projection": "SCR (Projection)",
+    "sante-prevoyance": {
+      "title": "Santé - Prévoyance",
+      "primes-sante": "Primes santé",
+      "prestation-sante": "Prestation santé",
+      "produit-sante": "Produits santé"
+    },
+    "epargne-retraites": {
+      "title": "Epargne - Retraites",
+      "passif-uc": "Passif UC",
+      "produit-uc": "Produits UC",
+      "primes": "Primes",
+      "rachat": "Rachat",
+      "taux-rachat-partiel": "Taux de rachat partiel",
+      "taux-rachat-total": "Taux de rachat total",
+      "rentes": "Rentes",
+      "actifs": "Actifs"
+    },
+    "bilan": "Bilan",
+    "fonds-propres": "Fonds propres",
+    "parametres": "Paramètres",
+    "database": "Database"
+  },
+  "scr-tabs": {
+    "tab1": "Hypothèse",
+    "tab2": "Risque de contrepartie",
+    "tab3": "Health SCR",
+    "tab4": "SCR UL"
+  },
+  "paramatres-tabs": {
+    "tab1": "Hypothèses de choc",
+    "tab2": "Matrice de correlation 1",
+    "tab3": "Matrice de correlation 2",
+    "tab4": "Courbe des taux"
+  },
   "scrcalculation": {
     "title": "Calcul SCR",
     "balance-sheet": "Saisie bilan",
@@ -318,7 +362,7 @@
 
     "hypothesis": "Hypothèse",
     "counterparty-risk": "Risque de contrepartie",
-    "scr-sante_en": "SCR Santé_FR",
+    "scr-sante_en": "SCR Santé",
 
     "hypothesis-tab": {
       "field-1": "Date de calcul",
